Add: starting the Homepage with the Navbar and the footer - Starting NotFoundPage

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,3 +11,49 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
+#root {
+  background-color: #333;
+  color: #fff;
+}
+
+@layer components {
+  .max-container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+}
+
+@layer utilities {
+  .padding {
+    @apply px-8 py-12 sm:px-16 sm:py-24;
+  }
+
+  .padding-x {
+    @apply px-8 sm:px-16;
+  }
+
+  .padding-y {
+    @apply py-12 sm:py-24;
+  }
+
+  .padding-l {
+    @apply pl-8 sm:pl-16;
+  }
+
+  .padding-r {
+    @apply pr-8 sm:pr-16;
+  }
+
+  .padding-t {
+    @apply pt-12 sm:pt-24;
+  }
+
+  .padding-b {
+    @apply pb-12 sm:pb-24;
+  }
+
+  .info-text {
+    @apply text-slate-gray font-montserrat text-lg leading-7;
+  }
+}
